<resources>
    <string name="app_name">Layout Project</string>
    <string name="this_is_my_layout_project_string">This is my layout project</string>
    <string name="button_string">Button</string>
    <string name="button2_string">Button2</string>
    <string name="button1_string">Button1</string>
    <string name="button3_string">Button3</string>
    <string name="checkbox1_sthing">CheckBox1</string>
    <string name="checkbox2_string">CheckBox2</string>
    <string name="checkbox4_string">CheckBox4</string>
    <string name="checkbox5_sting">CheckBox5</string>
    <string name="checkbox6_string">CheckBox6</string>
    <string name="checkbox3_string">CheckBox3</string>
    <string name="smilyface_string">SmilyFace</string>
</resources>